[gd_scene load_steps=10 format=3 uid="uid://cb3qlf30cf76"]

[ext_resource type="Script" uid="uid://cxf0ybpbh00sq" path="res://Scripts/gorilla_smash.gd" id="1_2vwju"]
[ext_resource type="Texture2D" uid="uid://do5edg0iltov0" path="res://Stuff for my game/gorilla_smash.png" id="2_2vwju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tntsh"]
size = Vector2(68, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qh1c"]
atlas = ExtResource("2_2vwju")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyvj5"]
atlas = ExtResource("2_2vwju")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcve4"]
atlas = ExtResource("2_2vwju")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xble"]
atlas = ExtResource("2_2vwju")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a72b"]
atlas = ExtResource("2_2vwju")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ybnx7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qh1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyvj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcve4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xble")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a72b")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Area2D" type="Area2D" groups=["EnemyProjectile"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_2vwju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12.5)
shape = SubResource("RectangleShape2D_tntsh")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(2, -5)
scale = Vector2(5.4, 3.48)
enable_node_path = NodePath("../CollisionShape2D")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_ybnx7")
frame_progress = 1.0
metadata/_edit_lock_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
